/*
 * Copyright 2019 The FATE Authors. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.webank.ai.fate.common.mlmodel.buffer;
option java_outer_classname = "FeatureSelectResultProto";

message FeatureSelectFilterResult{
    map<string, float> param_set = 1;
    repeated int64 original_cols = 2;
    repeated int64 left_cols = 3;
    string filter_name = 4;
    FeatureBinningResult bin_result = 5;
}

message FeatureSelectResults{
    repeated FeatureSelectFilterResult results = 1;
}

message IVResult {
    repeated float woe_array = 1;
    repeated float iv_array = 2;
    repeated int64 event_count_array = 3;
    repeated int64 non_event_count_array = 4;
    repeated float event_rate_array = 5;
    repeated float non_event_rate_array = 6;
    repeated float split_points = 7;
    float iv = 8;
    bool is_woe_monotonic = 9;
    int64 bin_nums = 10;
}

message FeatureBinningResult{
    repeated IVResult iv_result = 1;
    repeated IVResult host_iv_result = 2;
    repeated int64 cols = 3;
}