/*
 * Copyright 2019 The FATE Authors. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.webank.ai.fate.common.mlmodel.buffer;
option java_outer_classname = "FeatureSelectionMetaProto";

message FeatureSelectionMeta {
    repeated string filter_methods = 1;
    bool local_only = 2;
    repeated string cols = 3;
    UniqueValueMata unique_meta = 4;
    IVValueSelectionMata iv_value_meta = 5;
    IVPercentileSelectionMata iv_percentile_meta = 6;
    CoeffOfVarSelectionMata coe_meta = 7;
    OutlierColsSelectionMata outlier_meta = 8;
}

message UniqueValueMata {
    double eps = 1;
}

message IVValueSelectionMata{
    double value_threshold = 1;
}

message IVPercentileSelectionMata{
    double percentile_threshold = 1;
}

message CoeffOfVarSelectionMata {
    double value_threshold = 1;
}

message OutlierColsSelectionMata {
    double percentile = 1;
    double upper_threshold = 2;
}